# AOC22

./: Day1.py  Day2.py  Day2_input.py  Day3.py  Day4.py  Day4_input.py  Day5_input.py  Day8.py  Day8_input.py  pyproject.toml
Week1/: Day3_input.py  Day4.py  Day5.py  Day6.py  Day7.1.py  Day7.py  Day7_input.py  pyproject.toml
