[tool.poetry]
name = "aoc22"
version = "0.1.0"
description = ""
authors = ["William Haley <whaley@aledade.com>"]

[tool.poetry.dependencies]
python = "3.10.7"
numpy = "^1.23.5"
pandas = "^1.5.2"
anytree = "^2.8.0"
treelib = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
